--- a/SpringBoot/passstrong2/pom.xml
+++ b/SpringBoot/passstrong2/pom.xml
@@ -52,6 +52,11 @@
             <version>10.1.11</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <optional>true</optional>
+        </dependency>
     </dependencies>
 
     <build>
