--- a/SpringBoot/passstrong2/src/main/resources/properties/application.properties
+++ b/SpringBoot/passstrong2/src/main/resources/properties/application.properties
@@ -3,4 +3,4 @@ spring.mvc.view.suffix=.jsp
 
 spring.h2.console.enabled=true
 spring.sql.init.platform=h2
-spring.datasource.url=jdbc:h2:mem:alien
+spring.datasource.url=jdbc:h2:mem:client
